# QtSamara

./: .gitignore  AUTHORS  CMakeLists.txt  Samara.pro  Sortie Ecotrop.txt  resources.qrc
delphi2cpp/: BhyTypeFAO.h  DateTime.hpp  Meteo.h  MeteoCalc.h  MilBilanCarbone.h  Risocas2cpp.h  Riz.h  crop.h  delphi_defines.h  delphirunner.h  main.cpp  meteo.cpp  parameters.h  parcelle.h  psqlloader.h  samara.cpp  samara.h  sorghum.h  tmp.h  variables.h
doc/: 06SB15-fev13-D1_SV21.txt  Debug.txt  DelphiDB.xlsm  DelphiDB.xlsx  Modules.xlsx  Samara Model V2.docx  Samara V21 parameters.xlsx  Samara2_3.xlsx  SamaraFromPdx.xlsm  SamaraFromPdx.xlsm.xlsx  launch_database_creation.bat  script_user_database.sql
doc/delphiDB/: DictionnaireVar.csv  Entite.csv  Execution.csv  Forcage.csv  ListeLibrairie.csv  ListeSimule.csv  Lookup.csv  Modele.csv  ModeleModule.csv  ModeleVar.csv  Module.csv  ModuleVar.csv  STRUCT.csv  TableEntity.csv  TableVarResult.csv  Unite.csv  VarBorne.csv  reponse.csv
doc/delphisrc/: BhyTypeFAO.pas  BilanCarbonSArra.pas  Bileau.pas  ClasseSimule.pas  Copie de MilBilanCarbone.pas  Ecopalm2.pas  Ecopalm2_2.pas  Meteo.pas  MilBilanCarbone.pas  Palmier.pas  Phenologie.pas  Riz.pas  biomasse.pas  risocas.pas  risocas_2.pas  risocas_PRE_CONSOLIDATION.pas
doc/dephi2cpp/: ClasseScenario.cpp  ClasseScenario.h  ClasseSimule.cpp  ClasseSimule.h  ClasseSimule.pas  ClasseSimule.~pas  GestionDesErreurs.cpp  ModelsManage.cpp  ModelsManage.h  ModelsManage.pas  Requetes.cpp  Sorghum.pas
doc/dephi2cpp/samara/: ClasseSimule.h  GestionDesErreurs.h  Sorghum.h
doc/deprec/: Classeur1.xlsx  Exec from Paradox.xlsx  MultiModelPlatform_Import_Export.hpp  ParadoxSarraH23.xlsx  defines.hpp
doc/deprec/delphi2cpp/: Bileau.h  DateTime.cpp  Risocas2cpp.h  Riz.h  delphirunner.h  psqlloader.h  sorghum.h
doc/deprec/dephi2cpp/: ClasseScenario.pas  (+4 more)
doc/samara/: Samara Model V21.docx  Samara V2 Output variables_old.xlsx  Samara V2 parameters.xlsx  Samara V21 Output variables.xlsx  Samara V21 description.docx  Sensitivity Analysis.doc
doc/sarrah/: SarrahV32 Model.docx
samples/: Irrigation.csv
samples/batch/: batch_params.csv  batch_variables.csv  meteo.csv  params.csv
small_sln/: Samara.sln  SmallSamara.pro
small_sln/Samara/: Samara.vcxproj  Samara.vcxproj.filters
small_sln/src/: Bileau.h  Connections.cpp  DateTime.cpp  Meteo.h  ModelParameters.hpp  ParametersReader.cpp  ParametersReader.hpp  RcppExports.cpp  Risocas2cpp.h  Riz.h  delphi_defines.h  delphirunner.h  main.cpp  parameters.h  parcelle.h  rcpp_samara.cpp  samara.cpp  samara.h  samara_defines.h  sorghum.h  tmp.h  variables.cpp  variables.h  variables.h.To6836
src/: CMakeLists.txt  ModelParameters.hpp  MultiModelPlatform_Import_Export.cpp  main.cpp  samara.pc.in
src/app/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  version.hpp.in
src/model/kernel/: AbstractAtomicModel.hpp  AbstractCoupledModel.hpp  AbstractModel.hpp  CMakeLists.txt  Model.cpp  Model.hpp  Simulator.cpp  Simulator.hpp
src/model/models/common/: CMakeLists.txt  TemporalFileReader.cpp  TemporalFileReader.hpp
src/model/models/meteo/: CMakeLists.txt  Meteo.cpp  Meteo.hpp
src/model/models/samara/: CMakeLists.txt  Model.cpp  Model.hpp  Model2.cpp  Model2.hpp  Model2_1.cpp  Model2_1.hpp  Model2_2.cpp  Model2_2.hpp  Risocas.cpp
src/model/observer/: APEXHEIGHTGAINView.hpp  APEXHEIGHTView.hpp  ASSIMNOTUSEDView.hpp  ASSIMPOTView.hpp  ASSIMSURPLUSView.hpp  ASSIMView.hpp  CMakeLists.txt  CONVERSIONEFFView.hpp  CONVERSIONView.hpp  CSTRASSIMView.hpp  CSTRView.hpp  CULMSPERHILLView.hpp  CULMSPERPLANTView.hpp  CULMSPOPView.hpp  CUMPARView.hpp  DAYLENGTHView.hpp  DEADLEAFDRYWTPOPView.hpp  DEGRESDUJOURCORView.hpp  DEGRESDUJOURView.hpp  DENSITYView.hpp  DRView.hpp  DRYMATABOVEGROUNDPOPView.hpp  DRYMATPANICLETOTPOPView.hpp  DRYMATRESINTERNODEPOPView.hpp  DRYMATSTEMPOPView.hpp  DRYMATSTRUCTINTERNODEPOPView.hpp  DRYMATSTRUCTLEAFPOPView.hpp  DRYMATSTRUCTPANICLEPOPView.hpp  DRYMATSTRUCTROOTPOPView.hpp  DRYMATSTRUCTSHEATHPOPView.hpp  DRYMATSTRUCTTOTPOPView.hpp  DRYMATTOTPOPView.hpp  DRYMATVEGETOTPOPView.hpp  EAUDISPOView.hpp  ENDLView.hpp  ETMView.hpp  ETOView.hpp  ETRView.hpp  EVAPPOTView.hpp  EVAPView.hpp  (+84 more)
src/models/: Model2_1.hpp  Model2_2.hpp  Risocas.cpp  SamaraModel.cpp  SamaraModel.hpp
src/observer/: GlobalView.hpp
src/qtapp/: DBAccessLoader.h  DBEcosysloader.h  callout.h  chartmanager.cpp  chartmanager.h  chartview.cpp  chartview.h  comparisondatamodel.cpp  comparisondatamodel.h  comparisondatamodel2.cpp  comparisondatamodel2.h  comparisonmanager.cpp  comparisonmanager.h  estimparamdatamodel.cpp  estimparamdatamodel.h  loaderview.cpp  loaderview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meteodatamodel.cpp  meteodatamodel.h  obsdatamodel.cpp  obsdatamodel.h  parametersdatamodel.cpp  parametersdatamodel.h  resultsdatamodel.cpp  resultsdatamodel.h  resultsmanager.cpp  resultsmanager.h  resultview.cpp  resultview.h  view.cpp  view.h  visumanager.h
src/samara/: CMakeLists.txt  Model.hpp  lib.cpp  lib.hpp  version.hpp
src/samara/model/: CMakeLists.txt
src/samara/model/kernel/: AbstractAtomicModel.hpp  AbstractCoupledModel.hpp  AbstractModel.hpp  CMakeLists.txt  Model.cpp  Model.hpp  Simulator.cpp  Simulator.hpp
src/samara/model/models/: CMakeLists.txt  ModelParameters.cpp  ModelParameters.hpp
src/samara/model/models/common/: CMakeLists.txt  TemporalFileReader.cpp  TemporalFileReader.hpp
src/samara/model/models/meteo/: CMakeLists.txt  Meteo.cpp  Meteo.hpp
src/samara/model/models/samara/: CMakeLists.txt  Model.cpp  Model.hpp  Model2.cpp  Model2.hpp  Model2_1.cpp  Model2_1.hpp  Model2_2.cpp  Model2_2.hpp  Risocas.cpp  SamaraModel.cpp  SamaraModel.hpp
src/samara/model/observer/: CMakeLists.txt  GlobalView.hpp  Observer.hpp  View.cpp  View.hpp
src/samara/utils/: CMakeLists.txt  Connections.cpp  Connections.hpp  DateTime.hpp  Exception.hpp  ParametersReader.cpp  ParametersReader.hpp  TxtReader.h
src/utils/: CMakeLists.txt  Connections.cpp  Connections.hpp  DateTime.hpp  Exception.hpp  ParametersReader.cpp  ParametersReader.hpp
(+29 files in other folders)
