CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Samara CXX C)
ENABLE_TESTING()

SET(SAMARA_MAJOR 2)
SET(SAMARA_MINOR 1)
SET(SAMARA_PATCH 0)
SET(SAMARA_EXTRA "")
SET(SAMARA_VERSION "${SAMARA_MAJOR}.${SAMARA_MINOR}.${SAMARA_PATCH}")
SET(SAMARA_VERSION_SHORT "${SAMARA_MAJOR}.${SAMARA_MINOR}")
SET(SAMARA_NAME "samara")
SET(SAMARA_NAME_VERSION "${SAMARA_NAME}-${SAMARA_VERSION}")
SET(SAMARA_LOCALE_NAME "${SAMARA_NAME}-${SAMARA_MAJOR}-${SAMARA_MINOR}")
IF ("${SAMARA_EXTRA}" STREQUAL "")
  SET(SAMARA_COMPLETE "${SAMARA_MAJOR}.${SAMARA_MINOR}.${SAMARA_PATCH}")
ELSE ("${SAMARA_EXTRA}" STREQUAL "")
  SET(SAMARA_COMPLETE "${SAMARA_MAJOR}.${SAMARA_MINOR}.${SAMARA_PATCH}-${SAMARA_EXTRA}")
ENDIF ("${SAMARA_EXTRA}" STREQUAL "")
SET(SAMARA_NAME_COMPLETE "${SAMARA_NAME}-${SAMARA_COMPLETE}")

#
 # Installation variables
#

SET(SAMARA_LIBRARY_DIRS "lib/tnt-${SAMARA_VERSION_SHORT}")
SET(SAMARA_INCLUDE_DIRS "include/tnt-${SAMARA_VERSION_SHORT}/tnt")
SET(SAMARA_INCLUDE_DIR "include/tnt-${SAMARA_VERSION_SHORT}")
SET(SAMARA_MANPAGE_PATH "share/man/man1")
SET(SAMARA_SHARE_DIRS "share/tnt-${SAMARA_VERSION_SHORT}")

#
 # Append the library version information to the library target
 # properties.
#

SET(SAMARA_LIBRARY_PROPERTIES VERSION 0)
SET(SAMARA_APP_PROPERTIES SOVERSION "${SAMARA_MAJOR}.${SAMARA_MINOR}"
  VERSION "${SAMARA_MAJOR}.${SAMARA_MINOR}")

#
 # CPack configuration
#

INCLUDE(CMakeCPack.cmake)

#
 # Debug mode
#

IF (CMAKE_COMPILER_IS_GNUCC AND CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pthread -fPIC")
  IF (UNIX)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")
  ENDIF (UNIX)
ENDIF (CMAKE_COMPILER_IS_GNUCC AND CMAKE_COMPILER_IS_GNUCXX)

if (CMAKE_BUILD_TYPE STREQUAL "")
  SET(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Choose the type of build" FORCE)
endif ()

#
 # Modules
#

INCLUDE(CheckIncludeFileCXX)
INCLUDE(CheckIncludeFile)
INCLUDE(CheckLibraryExists)
INCLUDE(CMakeDetermineCCompiler)

#
 # Check libraries with pkgconfig
#

FIND_PACKAGE(PkgConfig REQUIRED)

# FIXME use old-style link directories for now
IF (COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 OLD)
ENDIF (COMMAND CMAKE_POLICY)

#
 # Find XML2
#

#INCLUDE(FindLibXml2)

#
 # Test the libboost header and libboost-text library.
#

SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_NO_SYSTEM_PATHS OFF)
SET(Boost_USE_STATIC_RUNTIME ON)
SET(Boost_DETAILED_FAILURE_MSG FALSE)
SET(Boost_DEBUG FALSE)

FIND_PACKAGE(Boost COMPONENTS
        date_time filesystem graph program_options system REQUIRED)
IF (Boost_MINOR_VERSION AND ${Boost_MINOR_VERSION} LESS "35")
  SET(Boost_SYSTEM_LIBRARY "")
ENDIF (Boost_MINOR_VERSION AND ${Boost_MINOR_VERSION} LESS "35")
IF (Boost_MINOR_VERSION AND ${Boost_MINOR_VERSION} LESS "41")
  SET(SAMARA_HAVE_BOOST_SPIRIT2 0 CACHE INTERNAL "" FORCE)
ELSE (Boost_MINOR_VERSION AND ${Boost_MINOR_VERSION} LESS "41")
  SET(SAMARA_HAVE_BOOST_SPIRIT2 1 CACHE INTERNAL "" FORCE)
ENDIF (Boost_MINOR_VERSION AND ${Boost_MINOR_VERSION} LESS "41")

#
 # Generate the config.h
#

CHECK_INCLUDE_FILE_CXX(cxxabi.h SAMARA_HAVE_GCC_ABI_DEMANGLE)
CHECK_INCLUDE_FILE_CXX(execinfo.h SAMARA_HAVE_EXECINFO)
CHECK_INCLUDE_FILE_CXX(signal.h SAMARA_HAVE_SIGNAL)
INCLUDE_DIRECTORIES(${SAMARA_BINARY_DIR})

#
 # Generate the vle.pc pkg-config file.
 # Build some variable to build a correct Win32 pkg config file with:
 # prefix=/target to detect the DIRNAME
 # cflag=-Iboost_1_34_1 for the directory
#

SET(SAMARA_PKGCONFIG_PREFIXPATH "${CMAKE_INSTALL_PREFIX}")
SET(SAMARA_PKGCONFIG_BOOSTINCLUDE_DIRS "${Boost_INCLUDE_DIRS}")
SET(SAMARA_PKGCONFIG_LIBDIR "lib")

#
 # Install the README
#

INSTALL(FILES "README" DESTINATION "${SAMARA_SHARE_DIRS}")
INSTALL(FILES "COPYING" DESTINATION "${SAMARA_SHARE_DIRS}")

#
 # Databases
#

PKG_CHECK_MODULES(PQXX libpqxx)

#
 # Browse the src subdirectory
#

ADD_SUBDIRECTORY(src)

#
 # Status
#

MESSAGE(STATUS "- - - -")
MESSAGE(STATUS "${SAMARA_NAME_COMPLETE} configured successfully")
MESSAGE(STATUS "Using ${CMAKE_INSTALL_PREFIX} for installation")
MESSAGE(STATUS "Build type ${CMAKE_BUILD_TYPE}")
IF (SAMARA_HAVE_GCC_ABI_DEMANGLE)
  MESSAGE(STATUS "Build with GCC ABI Demangle...: yes")
ENDIF (SAMARA_HAVE_GCC_ABI_DEMANGLE)
IF (SAMARA_HAVE_EXECINFO)
  MESSAGE(STATUS "Build with execinfo.h.........: yes")
ENDIF (SAMARA_HAVE_EXECINFO)
IF (Boost_FOUND)
  MESSAGE(STATUS "Build with boost..............: yes")
ENDIF (Boost_FOUND)
MESSAGE(STATUS "- - - -")
