INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(SAMARA_OBSERVER_HPP Observer.hpp)

SET(SAMARA_OBSERVER_CPP Observer.cpp)

ADD_LIBRARY(samara-observer SHARED ${SAMARA_OBSERVER_HPP} ${SAMARA_OBSERVER_CPP})
TARGET_LINK_LIBRARIES(samara-observer )

INSTALL(TARGETS samara-observer DESTINATION lib)
