INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${Boost_LIBRARY_DIRS})

SET(SAMARA_UTILS_CPP
    Connections.cpp ParametersReader.cpp)

SET(SAMARA_UTILS_HPP Connections.hpp Exception.hpp DateTime.hpp
  ParametersReader.hpp)

ADD_LIBRARY(samara-utils SHARED ${SAMARA_UTILS_CPP} ${SAMARA_UTILS_HPP})

TARGET_LINK_LIBRARIES(samara-utils ${Boost_LIBRARIES} pqxx)

INSTALL(FILES ${SAMARA_UTILS_HPP} DESTINATION
  ${SAMARA_INCLUDE_DIRS}/utils)

INSTALL(TARGETS samara-utils DESTINATION lib)
