INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(SAMARA_COMMON_HPP TemporalFileReader.hpp)

SET(SAMARA_COMMON_CPP TemporalFileReader.cpp)

ADD_LIBRARY(samara-models-common SHARED ${SAMARA_COMMON_HPP} ${SAMARA_COMMON_CPP})
TARGET_LINK_LIBRARIES(samara-models-common)

INSTALL(TARGETS samara-models-common DESTINATION lib)
