INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(SAMARA_METEO_HPP Meteo.hpp)

SET(SAMARA_METEO_CPP Meteo.cpp)

ADD_LIBRARY(samara-models-meteo SHARED ${SAMARA_METEO_HPP} ${SAMARA_METEO_CPP})
TARGET_LINK_LIBRARIES(samara-models-meteo )

INSTALL(TARGETS samara-models-meteo DESTINATION lib)
