INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(SAMARA_OBSERVER_HPP GlobalView.hpp Observer.hpp View.hpp)

SET(SAMARA_OBSERVER_CPP View.cpp)

ADD_LIBRARY(samara-observer SHARED ${SAMARA_OBSERVER_HPP}
  ${SAMARA_OBSERVER_CPP})
TARGET_LINK_LIBRARIES(samara-observer )

INSTALL(FILES ${SAMARA_OBSERVER_HPP} DESTINATION
  ${SAMARA_INCLUDE_DIRS}/model/observer)

INSTALL(TARGETS samara-observer DESTINATION lib)
