INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src 
  ${ARTIS_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS}
	${Boost_LIBRARY_DIRS})

SET(MODEL_SAMARA_HPP SamaraModel.hpp SamaraModel.cpp Model2.hpp Model2.cpp Model2_1.hpp
  Model2_1.cpp Model2_2.hpp Model2_2.cpp)
SET(MODEL_SAMARA_CPP Risocas.cpp)

ADD_LIBRARY(samara-models-samara SHARED ${MODEL_SAMARA_HPP} ${MODEL_SAMARA_CPP})
TARGET_LINK_LIBRARIES(samara-models-samara ${Boost_LIBRARIES})

INSTALL(FILES ${MODEL_SAMARA_HPP} DESTINATION
  ${SAMARA_INCLUDE_DIRS}/model/models/samara)

INSTALL(TARGETS samara-models-samara DESTINATION lib)
